* Curve: The admin registration form wasn't properly aligned in some browsers (login.css, ie6.css, ie7.css) [Bug 3541]
git-svn-id: https://devel.simplemachines.org/code/smf/trunk@8686 a96bbafc-d752-43aa-a6db-eed64a5f2cf9

--- a/Themes/curve/css/login.css
+++ b/Themes/curve/css/login.css
@@ -16,6 +16,8 @@
 dl.register_form
 {
 	margin: 0;
+	clear: both;
+	overflow: auto;
 }
 
 dl.register_form dt
@@ -40,7 +42,7 @@ dl.register_form dt span
 dl.register_form dd
 {
 	float: left;
-	clear: right;
+	width: 49%;
 	margin: 0.5em 0 0 0;
 }
 
